2006-02-24  Anthony Balkissoon  <abalkiss@redhat.com>

	* java/math/BigDecimal.java:
	(BigDecimal(long, MathContext)): New constructor.
	(BigDecimal(BigInteger, MathContext)): Likewise.
	(BigDecimal(String, MathContext)): Likewise.
	(BigDecimal(double, MathContext)): Likewise.
	(round): Fixed a typo where the precision field was used instead of a
	call to the precision method, and also store the new precision in the
	returned BigDecimal.
	(abs(MathContext)): New method.

2006-02-24  Anthony Balkissoon  <abalkiss@redhat.com>

	* java/math/BigDecimal.java
	(toBigInteger): Fixed problem where this method couldn't handle 
	negative values for scale.
	(toBigIntegerExact): New method.
	(stripTrailingZeros): Likewise.

2006-02-23  Anthony Balkissoon  <abalkiss@redhat.com>

	* java/math/BigDecimal.java:
	(toString): Fixed a problem where the negative sign was being displayed
	twice in the exponent.
	(toEngineeringString): New method.
	(toPlainString): Likewise.
	(pow): Likewise.

2006-02-23  Anthony Balkissoon  <abalkiss@redhat.com>

	* java/math/BigDecimal.java:
	(toString): Rewrote this method to behave as specified.  Added API
	comments to explain behaviour.
	(scaleByPowerOfTen): New method.

2006-02-22  Anthony Balkissoon  <abalkiss@redhat.com>

	* java/math/BigDecimal.java:
	(BigDecimal(char[], int, int, MathContext)): New constructor.
	(BigDecimal(char[], MathContext)): Likewise.
	(BigDecimal(char[])): Likewise.
	(BigDecimal(char[], int, int)): Likewise.
	(BigDecimal(String)): Fixed handling of exponent and scale.

2006-02-21  Anthony Balkissoon  <abalkiss@redhat.com>

	* java/math/BigDecimal.java:
	(mathContext): New field.
	(precision): Likewise.
	(BigDecimal(int)): New constructor.
	(BigDecimal(long)): Likewise.
	(BigDecimal(BigInteger)): Added API docs.
	(BigDecimal(BigInteger, int)): Removed incorrect NumberFormatException
	and added API docs.
	(plus): New method.
	(round): Likewise.
	(precision): Likewise.
	(valueOf): Likewise.